Simple hub discovery.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,13 @@ set (HEADER_FILES
     hue.h
     )
 
-add_library(hue_cpp ${SOURCE_FILES})
-target_link_libraries(hue_cpp curl)
+set (DEMO_SOURCE_FILES
+    demo/demo.cpp
+    )
+
+add_library(hue_cpp ${SOURCE_FILES} ${HEADER_FILES})
+target_link_libraries(hue_cpp curl jsoncpp)
+
+add_executable(demo ${DEMO_SOURCE_FILES})
+target_link_libraries(demo hue_cpp curl)
 
